// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: ProgressTracker Basic ProgressTracker renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    Add class 
    <code
      className="token property"
    >
      .progress-tracker
    </code>
     to a containing 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ol&gt;
    </PrismCode>
     element and nest a 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;a&gt;
    </PrismCode>
     or 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;span&gt;
    </PrismCode>
     element inside the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     elements.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ProgressTracker
      items={
        Array [
          Object {
            "href": "#",
            "title": "Registration",
          },
          Object {
            "active": true,
            "title": "Confirmation",
          },
          Object {
            "href": "#",
            "title": "Payment",
          },
          Object {
            "href": "#",
            "title": "Receipt",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: ProgressTracker Disabled ProgressTracker renders 1`] = `
<Fragment>
  <h2
    id="disable-a-step"
  >
    Disable a step
  </h2>
  <p>
    To disable a step in the progress tracker, simply use a 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;span&gt;
    </PrismCode>
     element within the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     element (will not work with 
    <code
      className="token property"
    >
      .active
    </code>
    ).
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ProgressTracker
      items={
        Array [
          Object {
            "href": "#",
            "title": "Registration",
          },
          Object {
            "href": "#",
            "title": "Confirmation",
          },
          Object {
            "active": true,
            "title": "Payment",
          },
          Object {
            "title": "Receipt",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: ProgressTracker ProgressTracker Text renders 1`] = `
<div
  className="col-12 col-lg-10 doc-body"
>
  <DeprecatedComponentAlert />
  <p
    className="lead"
  >
    Progress trackers are a good way to display the users current progress in a given path, while also showing the user the remaining steps. This is usually used when the user are expected to complete several steps in a process.
  </p>
  <BasicProgressTracker />
  <SmallProgressTracker />
  <DisabledProgressTracker />
</div>
`;

exports[`Documentation: ProgressTracker Small ProgressTracker renders 1`] = `
<Fragment>
  <h2
    id="small-progress-tracker"
  >
    Small progress tracker
  </h2>
  <p>
    Add class 
    <code
      className="token property"
    >
      .progress-tracker-sm
    </code>
     to the containing 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ol&gt;
    </PrismCode>
     element for a smaller version of the progress tracker component.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <ProgressTracker
      items={
        Array [
          Object {
            "href": "#",
            "title": "Registration",
          },
          Object {
            "href": "#",
            "title": "Confirmation",
          },
          Object {
            "active": true,
            "title": "Payment",
          },
          Object {
            "href": "#",
            "title": "Receipt",
          },
        ]
      }
      small={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: ProgressTracker renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <ProgressTrackerText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
